--- a/code/vhb_markdown.Rmd
+++ b/code/vhb_markdown.Rmd
@@ -26,7 +26,7 @@ Reading insolvency data in August and September where subject is "Eröffnungen"
 #)
 
 orbis_raw_top1000 <- read.csv(
-  "../raw_data/orbis_wrds_de.csv.gz", 
+  "../raw_data/orbis_wrds_de.csv", 
   header = TRUE,
   fileEncoding = "UTF-8",
   nrows = 100000
@@ -96,8 +96,34 @@ top1000rightjoin_data$subject_NA[is.na(top1000rightjoin_data$subject_NA)] <- 0
 
 
 top1000rightjoin_data %>%
-  group_by(legalfrm, subject_NA) %>%
+  group_by(subject, legalfrm) %>%
   summarise(N = n(), .groups = "drop")
+
+```
+
+
+Data analysis
+```{r datanalysis}
+
+top1000rightjoin_data <- dummy_cols(top1000rightjoin_data, select_columns = 'subject')
+top1000rightjoin_data$subject_Eröffnungen[is.na(top1000rightjoin_data$subject_Eröffnungen)] <- 0
+top1000rightjoin_data$subject_NA[is.na(top1000rightjoin_data$subject_NA)] <- 0
+
+
+top1000rightjoin_data %>%
+  group_by(subject, major_sector) %>%
+  summarise(N = n(), .groups = "drop")
+
+```
+
+
+Numerical data analysis
+```{r numdataanalysis}
+
+top1000rightjoin_data %>%
+  group_by(subject) %>%
+  summarise(meantoas = mean(toas, na.rm = TRUE),
+            meanempl = mean(empl, na.rm = TRUE))
 
 ```
 
