--- a/group_work/Issue 3.Rmd
+++ b/group_work/Issue 3.Rmd
@@ -11,6 +11,7 @@ library(tidyverse)
 library(knitr)
 library(kableExtra)
 library(stringr)
+library(ggplot2)
 
 Sys.setlocale("LC_ALL", "UTF-8")
 ```
@@ -28,14 +29,14 @@ insol_raw <- read_csv(
 ```{r readOrbis}
 orbis_raw <- read_csv(
   "../raw_data/orbis_wrds_de.csv",
-  col_types = cols(), n_max = 1000
+  col_types = cols(), n_max = 100000
 )
 ```
 The Insolvency (Orbis) dataset contains `r length(which(duplicated(insol_raw)))` (`r length(which(duplicated(orbis_raw)))`) duplicates. Let's delete them.
 
 ```{r deleteDups, results = "hide"}
 insol_de <- insol_raw %>% unique()
-orbis_de <- orbis_raw %>% unique()
+#orbis_de <- orbis_raw %>% unique()
 ```
 
 
@@ -61,6 +62,7 @@ Try to find a match for each insolvent company in the orbis universe
 ```{r fuzzyMatch, results = "hide"}
 insol_filers <- data_frame()
 pb <- txtProgressBar(min = 0, max = length(internat_name), style = 3)
+insol_filer <- rep(0, length(orbis_de))
 for(i in 1:length(internat_name)){
   
   rown <- "NA"
@@ -76,6 +78,7 @@ for(i in 1:length(internat_name)){
   #If there is a match save it
   if(length(rown)>0){
     insol_filers <- rbind(insol_filers, orbis_de[rown,])
+    insol_filer[rown] <- 1
   }
   }
   setTxtProgressBar(pb, i)
@@ -83,4 +86,33 @@ for(i in 1:length(internat_name)){
 ```
 
 The methodology identified orbis data for `r length(unique(insol_filers$bvdid))` of the `r length(internat_name)` insolvent companies.
+
+Calculate the ratio of current liabilities to total liabilities-
+```{r CLTL, results = "hide"}
+CLTL_universe <- orbis_de$culi/(orbis_de$culi + orbis_de$ncli)
+CLTL_insol    <- insol_filers$culi/(insol_filers$culi + insol_filers$ncli)
+
+CLTL_universe_mean <- aggregate(CLTL_universe, list(orbis_de$year), function(x) mean(x, na.rm=TRUE))
+CLTL_insol_mean    <- aggregate(CLTL_insol, list(insol_filers$year), function(x) mean(x, na.rm=TRUE))
+
+CLTL_universe_mean$insol <- "No Insolvency"
+CLTL_insol_mean$insol    <- "Insolvency"
+CLTL <- rbind(CLTL_universe_mean[CLTL_universe_mean$Group.1 > 2000,], 
+                   CLTL_insol_mean[CLTL_insol_mean$Group.1 > 2000,])
+
+colnames(CLTL)     <- c("Year", "Mean", "Insolvency")
+```
+
+Plot the ratios
+
+```{r CLTLPlot}
+
+
+ggplot(CLTL, aes(x=Year, y=Mean, col=Insolvency)) +
+ geom_line() +
+ ggtitle("Current Liabilities to Total Liabilities") +
+ theme(plot.title = element_text(hjust = 0.5))
+
+
+```
 
