--- a/group_work/Issue 3.Rmd
+++ b/group_work/Issue 3.Rmd
@@ -153,3 +153,15 @@ ggplot(CLTL, aes(x=Year, y=Mean, col=Insolvency)) +
 
 ```
 
+```{r Boxplot Cash to Total Assets}
+
+orbis_de$cash_toas <- orbis_de$cash/orbis_de$toas
+
+ggplot(data = orbis_de, 
+       aes(x = insolvent, y = cash_toas)) +
+  geom_boxplot() +
+  xlab("Insolvent") +
+  ylab("Cash_Total Assets") +
+  labs(title = "Comparison by Cash to Total Assets") 
+  
+```
